--- a/src/svc/newt/.env.dist
+++ b/src/svc/newt/.env.dist
@@ -1,4 +1,6 @@
 SUBNET=172.20.0.0/28
+GATEWAY=172.20.0.1
+IPv4=172.20.0.10
 PANGOLIN_ENDPOINT=https://pangolin-api.example.com
 NEWT_SECRET=nnisrfsdfc7prqsp9ewo1dvtvci50j5uiqotez00dgap0ii2
 NEWT_ID=2ix2t8xk22ubpfy
