--- a/src/svc/newt/docker-compose.yml
+++ b/src/svc/newt/docker-compose.yml
@@ -9,20 +9,21 @@ services:
             NEWT_ID: ${NEWT_ID}
             NEWT_SECRET: ${NEWT_SECRET}
             DOCKER_SOCKET: /var/run/docker.sock
-        networks:
-            newt:
-                ipv4_address: ${IPv4}
+        # networks:
+        #     newt:
+        #         ipv4_address: ${IPv4}
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock:ro
             - /etc/localtime:/etc/localtime:ro
             - /etc/timezone:/etc/timezone:ro
 
-networks:
-    newt:
-        driver: bridge
-        driver_opts:
-            encrypted: "true"
-        ipam:
-            config:
-                - subnet: ${SUBNET}
-                  gateway: ${GATEWAY}
+# networks:
+#     newt:
+#         name: newt
+#         driver: bridge
+#         driver_opts:
+#             encrypted: "true"
+#         ipam:
+#             config:
+#                 - subnet: ${SUBNET}
+#                   gateway: ${GATEWAY}
