--- a/src/svc/pydio-cells/docker-compose.yml
+++ b/src/svc/pydio-cells/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         container_name: pydio-cells
         restart: unless-stopped
         healthcheck:
-            test: ["CMD-SHELL", "wget -nv -t1 --spider http://pydio-cells:8080 || exit 1"]
+            test: ["CMD-SHELL", "wget -nv -t1 --spider https://pydio-cells:8080 || exit 1"]
             interval: 1m
             timeout: 10s
             retries: 3
