--- a/src/svc/portainer-ee/.env.dist
+++ b/src/svc/portainer-ee/.env.dist
@@ -1,6 +1,8 @@
 SUBNET=172.20.1.0/28
-SUBNET_INTERNAL=172.21.1.0/28
 GATEWAY=172.20.1.1
-GATEWAY_INTERNAL=172.21.1.1
 IPv4=172.20.1.10
 IPv4_TOOLS=172.20.1.11
+SERVER_URL=https://portainer-tools.example.com
+PORTAINER_URL=https://portainer.example.com
+PORTAINER_USERNAME=admin
+PORTAINER_PASSWORD=admin
