--- a/src/svc/portainer-ee/docker-compose.yml
+++ b/src/svc/portainer-ee/docker-compose.yml
@@ -64,6 +64,13 @@ services:
             retries: 3
             start_interval: 10s
             start_period: 1m
+        environment:
+            PUID: 1000
+            PGID: 1000
+            SERVER_URL: ${SERVER_URL}
+            PORTAINER_URL: ${PORTAINER_URL}
+            PORTAINER_USERNAME: ${PORTAINER_USERNAME}
+            PORTAINER_PASSWORD: ${PORTAINER_PASSWORD}
         networks:
             portainer:
                 ipv4_address: ${IPv4_TOOLS}
