--- a/src/svc/filestash/docker-compose.yml
+++ b/src/svc/filestash/docker-compose.yml
@@ -48,7 +48,8 @@ services:
                 curl -o /usr/share/coolwsd/browser/dist/branding-desktop.css https://gist.githubusercontent.com/mickael-kerjean/bc1f57cd312cf04731d30185cc4e7ba2/raw/d706dcdf23c21441e5af289d871b33defc2770ea/destop.css
                 /bin/su -s /bin/bash -c '/start-collabora-online.sh' cool
         networks:
-            - filestash
+            filestash:
+                ipv4_address: ${IPv4_WOPI}
         ports:
             - ${HOST_PORT_WOPI}:9980
 
