--- a/src/svc/activepieces/docker-compose.yml
+++ b/src/svc/activepieces/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             interval: 1m
             timeout: 10s
             retries: 3
+            start_interval: 10s
+            start_period: 1m
         ## Enable the following line if you already use AP_EXECUTION_MODE with SANDBOXED or old activepieces, checking the breaking change documentation for more info.
         ## privileged: true
         environment:
