--- a/src/svc/dozzle/docker-compose.yml
+++ b/src/svc/dozzle/docker-compose.yml
@@ -10,6 +10,8 @@ services:
             interval: 1m
             timeout: 10s
             retries: 3
+            start_interval: 10s
+            start_period: 1m
         environment:
             DOZZLE_LEVEL: info
             DOZZLE_FILTER: status=running
