--- a/src/svc/newt/docker-compose.yml
+++ b/src/svc/newt/docker-compose.yml
@@ -4,6 +4,13 @@ services:
         image: fosrl/newt:latest
         hostname: newt
         container_name: newt
+        healthcheck:
+            test: ["CMD-SHELL", "touch /tmp/health.txt"]
+            interval: 1m
+            timeout: 10s
+            retries: 3
+            start_interval: 10s
+            start_period: 1m
         environment:
             PANGOLIN_ENDPOINT: ${PANGOLIN_ENDPOINT}
             NEWT_ID: ${NEWT_ID}
