--- a/src/svc/vaultwarden/docker-compose.yml
+++ b/src/svc/vaultwarden/docker-compose.yml
@@ -10,19 +10,21 @@ services:
             interval: 1m
             timeout: 10s
             retries: 3
+            start_interval: 10s
+            start_period: 1m
         environment:
-            - ADMIN_TOKEN=${ADMIN_TOKEN}
-            - SIGNUPS_ALLOWED=${SIGNUPS_ALLOWED}
-            - WEBSOCKET_ENABLED=${WEBSOCKET_ENABLED}
-            - SMTP_HOST=${SMTP_HOST}
-            - SMTP_FROM=${SMTP_FROM}
-            - SMTP_FROM_NAME=${SMTP_FROM_NAME}
-            - SMTP_PORT=${SMTP_PORT}
-            - SMTP_SECURITY=${SMTP_SECURITY}
-            - SMTP_USERNAME=${SMTP_USERNAME}
-            - SMTP_PASSWORD=${SMTP_PASSWORD}
-            - SMTP_TIMEOUT=${SMTP_TIMEOUT}
-            - DOMAIN=${DOMAIN}
+            ADMIN_TOKEN: ${ADMIN_TOKEN}
+            SIGNUPS_ALLOWED: ${SIGNUPS_ALLOWED}
+            WEBSOCKET_ENABLED: ${WEBSOCKET_ENABLED}
+            SMTP_HOST: ${SMTP_HOST}
+            SMTP_FROM: ${SMTP_FROM}
+            SMTP_FROM_NAME: ${SMTP_FROM_NAME}
+            SMTP_PORT: ${SMTP_PORT}
+            SMTP_SECURITY: ${SMTP_SECURITY}
+            SMTP_USERNAME: ${SMTP_USERNAME}
+            SMTP_PASSWORD: ${SMTP_PASSWORD}
+            SMTP_TIMEOUT: ${SMTP_TIMEOUT}
+            DOMAIN: ${DOMAIN}
         networks:
             vaultwarden:
                 ipv4_address: ${IPv4}
