--- a/src/svc/wikijs/docker-compose.yml
+++ b/src/svc/wikijs/docker-compose.yml
@@ -10,6 +10,8 @@ services:
             interval: 1m
             timeout: 10s
             retries: 3
+            start_interval: 10s
+            start_period: 1m
         environment:
             DB_TYPE=postgres
             DB_HOST=wikijs-postgres
@@ -43,6 +45,8 @@ services:
             interval: 1m
             timeout: 10s
             retries: 3
+            start_interval: 10s
+            start_period: 1m
         environment:
             POSTGRES_USER=wikijs
             POSTGRES_PASSWORD=${DB_PASS}
