--- a/src/svc/vaultwarden/docker-compose.yml
+++ b/src/svc/vaultwarden/docker-compose.yml
@@ -32,6 +32,8 @@ services:
           - "${HOST_PORT}:80"
         volumes:
             - vaultwarden-data:/data
+            - /etc/localtime:/etc/localtime:ro
+            - /etc/timezone:/etc/timezone:ro
 
 volumes:
     vaultwarden-data:
